Fixed bubble spacing

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -33,7 +33,10 @@ body {
     height: 100%;
 }
 
-.drawer > .header > .title {
+.drawer > .header {
+    align-items: center;
+}
+.drawer > .header .title {
     font-size: 24px;
     font-weight: bold;
 }
